[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["kienvd1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pandas = "^2.2.3"
huggingface = "^0.0.1"
transformers = "^4.46.3"
pydantic = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
